--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<title>Minimum Bootstrap HTML Skeleton</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Catamaran&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
  <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
  
@@ -63,9 +64,10 @@
 	<div class="container center">
 		<div class="row">
 			<div class="col-md-12">
-				<h1 style="color:chartreuse;font-size: 25px;">Fastora Is Coming Soon.</h1>
-				<div style="color:white">Waiting Is Tough</div>
-					<i class="fa-3x fa fa-spinner fa-spin icon_color_main" aria-hidden="true"></i>
+				<h1 style="font-family: 'Syne Mono', monospace;
+ color:chartreuse;font-size: 25px;">Fastora Is Coming Soon.</h1>
+				<div style="font-size:20px; margin-top: 15px;color:white">Waiting Karo Nahi Maa Chod denge</div>
+					<i class="padding fa-3x fa fa-spinner fa-spin icon_color_main" aria-hidden="true"></i>
 			</div>
 		</div>
 	</div>
